chore: ajustes gitignore + meta tags en index

--- a/src/index.html
+++ b/src/index.html
@@ -238,5 +238,8 @@
 </footer>
 
   <script type="module" src="/scripts/main.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=RECAPTCHA_SITE_KEY"></script>
+  <script type="module" src="/scripts/form.js"></script>
+
 </body>
 </html>
