update index.html y styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -4,38 +4,29 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <!-- Títulos (se mantienen ambos, como en tu versión) -->
   <title>Artífices Studio – Diagnóstico de Potencial de Marca</title>
-  <!-- ========== SEO & Social Sharing ========== -->
   <title>Diagnóstico de Potencial de Marca | Artífices Studio</title>
 
-  <meta name="description"
-        content="Convierte tu marca en tu activo más valioso. Reserva un Diagnóstico de Potencial de Marca 100 % gratuito con los expertos de Artífices Studio." />
+  <meta name="description" content="Convierte tu marca en tu activo más valioso. Reserva un Diagnóstico de Potencial de Marca 100 % gratuito con los expertos de Artífices Studio." />
 
-  <!-- Canonical -->
   <link rel="canonical" href="https://artifices.studio/diagnostico" />
 
-  <!-- Open Graph -->
   <meta property="og:site_name" content="Artífices Studio" />
   <meta property="og:type"      content="website" />
   <meta property="og:url"       content="https://artifices.studio/diagnostico" />
   <meta property="og:title"     content="Diagnóstico de Potencial de Marca | Artífices Studio" />
-  <meta property="og:description"
-        content="Diagnóstico gratuito: descubre las oportunidades ocultas de tu marca y recibe un plan de acción personalizado en 30 minutos." />
+  <meta property="og:description" content="Diagnóstico gratuito: descubre las oportunidades ocultas de tu marca y recibe un plan de acción personalizado en 30 minutos." />
   <meta property="og:image"        content="https://artifices.studio/img/og/diagnostico-1200x630.jpg" />
   <meta property="og:image:width"  content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Twitter -->
   <meta name="twitter:card"        content="summary_large_image" />
   <meta name="twitter:site"        content="@ArtificesStudio" />
   <meta name="twitter:url"         content="https://artifices.studio/diagnostico" />
   <meta name="twitter:title"       content="Diagnóstico de Potencial de Marca | Artífices Studio" />
-  <meta name="twitter:description"
-        content="Reserva gratis tu diagnóstico y convierte tu marca en motor de crecimiento." />
+  <meta name="twitter:description" content="Reserva gratis tu diagnóstico y convierte tu marca en motor de crecimiento." />
   <meta name="twitter:image"       content="https://artifices.studio/img/og/diagnostico-1200x630.jpg" />
 
-  <!-- Schema.org -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -45,19 +36,13 @@
     "logo":"https://artifices.studio/img/logotipos/logotipoartificesoficial.svg"
   }
   </script>
-  <!-- ========== /SEO & Social ========== -->
 
-  <!-- reCAPTCHA v3 -->
   <script defer src="https://www.google.com/recaptcha/api.js?render=TU_SITE_KEY_V3"></script>
 
-  <!-- Estilos -->
   <link href="css/styles.css" rel="stylesheet" />
+  <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/helvetica_neue.css">
 
-      <!-- Tipografías -->
-    <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/helvetica_neue.css">
-
-  <!-- Favicon -->
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="assets/img/favicon-32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="assets/img/favicon-16.png" sizes="16x16" type="image/png">
@@ -67,13 +52,11 @@
 <body>
   <!-- HEADER -->
   <header>
-    <div class="container" style="display:flex;justify-content:center;padding:1rem 0;">
+    <div class="container">
       <a href="/" title="Inicio">
         <h1 class="visually-hidden">Artífices Studio</h1>
-        <div style="display:flex;flex-direction:column;align-items:center;">
-          <img src="assets/images/logotipoartificesoficial.svg"
-               alt="Logotipo Artífices"
-               style="height:1.75rem" />
+        <div class="header-logo-stack">
+          <img src="assets/images/logotipoartificesoficial.svg" alt="Logotipo Artífices" />
           <span class="font-primary tagline">Experimental Creative Studio</span>
         </div>
       </a>
@@ -89,7 +72,7 @@
           Transforma tu marca en tu activo más valioso y deja de competir por precio.
         </h2>
         <p>
-          Solicita un <strong class="font-bold" style="color:var(--gray-800);">Diagnóstico de Potencial de Marca</strong>
+          Solicita un <strong class="font-bold">Diagnóstico de Potencial de Marca</strong>
           100&nbsp;% gratuito. En una llamada estratégica de 30 minutos, un experto de Artífices analizará tu negocio y te
           entregará un plan de acción inicial para convertir tu marca en un verdadero motor de crecimiento.
         </p>
@@ -98,10 +81,9 @@
     </section>
 
     <!-- MARCAS SCROLLER -->
-    <section class="section fade-in-section" style="background:var(--gray-50);">
+    <section class="section fade-in-section section--gray50">
       <div class="container">
-        <h3 class="text-center font-primary"
-            style="font-size:1.75rem;font-weight:700;color:var(--gray-800);">
+        <h3 class="text-center font-primary brands-title">
           Marcas en las que nuestros fundadores han sido artífices
         </h3>
         <div class="scroller">
@@ -116,69 +98,92 @@
     </section>
 
     <!-- BENEFICIOS -->
-    <!-- (sección intacta, sin cambios) -->
     <section class="section fade-in-section">
       <div class="container">
-        <h2 class="text-center font-primary" style="font-size:2rem;font-weight:700;color:var(--gray-800);">
+        <h2 class="text-center font-primary benefits-title">
           En tu diagnóstico descubrirás:
         </h2>
-        <div class="benefits" style="margin-top:3rem;">
+        <div class="benefits">
           <!-- Benefit 1 -->
-          <div class="benefit"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
-            <div style="margin-left:1rem;"><h4>Claridad Inmediata</h4><p>Identificaremos la brecha principal entre la visión de tu negocio y la percepción actual que tiene el mercado de tu marca.</p></div>
+          <div class="benefit">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </svg>
+            <div class="benefit-text">
+              <h4>Claridad Inmediata</h4>
+              <p>Identificaremos la brecha principal entre la visión de tu negocio y la percepción actual que tiene el mercado de tu marca.</p>
+            </div>
           </div>
           <!-- Benefit 2 -->
-          <div class="benefit"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
-            <div style="margin-left:1rem;"><h4>Oportunidades de Rápida Implementación</h4><p>Descubrirás al menos 3 acciones concretas que puedes aplicar desde mañana para mejorar cómo comunicas tu valor.</p></div>
+          <div class="benefit">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </svg>
+            <div class="benefit-text">
+              <h4>Oportunidades de Rápida Implementación</h4>
+              <p>Descubrirás al menos 3 acciones concretas que puedes aplicar desde mañana para mejorar cómo comunicas tu valor.</p>
+            </div>
           </div>
           <!-- Benefit 3 -->
-          <div class="benefit"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
-            <div style="margin-left:1rem;"><h4>El Potencial de un Método Real</h4><p>Entenderás cómo nuestro “Método Inmersivo” puede alinear a tu equipo, atraer a los clientes correctos y construir una cultura de marca sólida.</p></div>
+          <div class="benefit">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </svg>
+            <div class="benefit-text">
+              <h4>El Potencial de un Método Real</h4>
+              <p>Entenderás cómo nuestro “Método Inmersivo” puede alinear a tu equipo, atraer a los clientes correctos y construir una cultura de marca sólida.</p>
+            </div>
           </div>
           <!-- Benefit 4 -->
-          <div class="benefit"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
-            <div style="margin-left:1rem;"><h4>Diagnóstico Honesto y sin Compromiso</h4><p>Te diremos con total transparencia si somos (o no) el socio estratégico adecuado para ti en este momento. Cero presión.</p></div>
+          <div class="benefit">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </svg>
+            <div class="benefit-text">
+              <h4>Diagnóstico Honesto y sin Compromiso</h4>
+              <p>Te diremos con total transparencia si somos (o no) el socio estratégico adecuado para ti en este momento. Cero presión.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- TESTIMONIOS (mock-up) -->
-    <section class="section fade-in-section" style="background:var(--gray-50);">
+    <!-- TESTIMONIOS -->
+    <section class="section fade-in-section section--gray50 testimonials-section">
       <div class="container text-center">
-        <span class="section-tagline" style="color:var(--primary);font-weight:700;font-size:.875rem;">Testimonios</span>
-        <h3 class="font-primary" style="font-size:2rem;font-weight:700;color:var(--gray-900);margin:.5rem 0 2rem;">
+        <span class="section-tagline">Testimonios</span>
+        <h2 class="font-primary testimonials-heading-alt">
           Lo que opinan las marcas que ya confiaron en nosotros
-        </h3>
+        </h2>
         <div class="testimonials-fader-frame">
-        <div class="testimonials-v3-wrapper">
-          <!-- Rodrigo -->
-          <article class="testimonials-v3-card">
-            <img class="avatar" src="assets/avatars/rodrigo.webp" alt="Rodrigo Rivera">
-            <p>Artífices no solo rediseñó nuestro logo: <strong>redefinió el ADN de Blindatek</strong>. El diagnóstico reveló oportunidades que se tradujeron en un aumento de leads y una identidad que hoy reconocen nuestros clientes en segundos.</p>
-            <div class="testimonial-author">Rodrigo Rivera</div>
-            <div class="testimonial-role">CEO, Blindatek</div>
-            <div class="rating-stars">★★★★★</div>
-          </article>
+          <div class="testimonials-v3-wrapper">
+            <!-- Rodrigo -->
+            <article class="testimonials-v3-card">
+              <img class="avatar" src="assets/avatars/rodrigo.webp" alt="Rodrigo Rivera">
+              <p>Artífices no solo rediseñó nuestro logo: <strong>redefinió el ADN de Blindatek</strong>. El diagnóstico reveló oportunidades que se tradujeron en un aumento de leads y una identidad que hoy reconocen nuestros clientes en segundos.</p>
+              <div class="testimonial-author">Rodrigo Rivera</div>
+              <div class="testimonial-role">CEO, Blindatek</div>
+              <div class="rating-stars">★★★★★</div>
+            </article>
 
-          <!-- Natalia -->
-          <article class="testimonials-v3-card">
-            <img class="avatar" src="assets/avatars/natalia.webp" alt="Natalia Beiza">
-            <p>Partí con una idea y muchas dudas. Artífices convirtió ese boceto en <strong>Comprende.me</strong>: nombre, identidad y una estrategia digital que conecta con cientos de familias. Sentí que tenía un <strong>equipo in-house</strong> desde el primer día.</p>
-            <div class="testimonial-author">Natalia Beiza</div>
-            <div class="testimonial-role">Fundadora, Comprende.me</div>
-            <div class="rating-stars">★★★★★</div>
-          </article>
+            <!-- Natalia -->
+            <article class="testimonials-v3-card">
+              <img class="avatar" src="assets/avatars/natalia.webp" alt="Natalia Beiza">
+              <p>Partí con una idea y muchas dudas. Artífices convirtió ese boceto en <strong>Comprende.me</strong>: nombre, identidad y una estrategia digital que conecta con cientos de familias. Sentí que tenía un <strong>equipo in-house</strong> desde el primer día.</p>
+              <div class="testimonial-author">Natalia Beiza</div>
+              <div class="testimonial-role">Fundadora, Comprende.me</div>
+              <div class="rating-stars">★★★★★</div>
+            </article>
 
-          <!-- José Durán (CreaFive) -->
-          <article class="testimonials-v3-card">
-            <img class="avatar" src="assets/avatars/jose.webp" alt="José Durán">
-            <p>Artífices lideró el <strong>naming</strong>, el <strong>branding</strong>, el diseño de interfaz y la estrategia de marketing de nuestra nueva plataforma. Lanzar con un concepto tan sólido nos puso en el mapa desde el día cero.</p>
-            <div class="testimonial-author">José Durán</div>
-            <div class="testimonial-role">creafive.cl</div>
-            <div class="rating-stars">★★★★★</div>
-          </article>
-        </div>
+            <!-- José Durán -->
+            <article class="testimonials-v3-card">
+              <img class="avatar" src="assets/avatars/jose.webp" alt="José Durán">
+              <p>Artífices lideró el <strong>naming</strong>, el <strong>branding</strong>, el diseño de interfaz y la estrategia de marketing de nuestra nueva plataforma. Lanzar con un concepto tan sólido nos puso en el mapa desde el día cero.</p>
+              <div class="testimonial-author">José Durán</div>
+              <div class="testimonial-role">creafive.cl</div>
+              <div class="rating-stars">★★★★★</div>
+            </article>
+          </div>
         </div>
       </div>
     </section>
@@ -188,28 +193,28 @@
       <div class="container">
         <div class="form-wrapper">
           <div class="text-center">
-            <h2 class="font-primary" style="font-size:2rem;font-weight:700;color:var(--gray-800);">
+            <h2 class="font-primary form-title">
               Reserva tu Diagnóstico Gratuito Ahora
             </h2>
-            <p style="color:var(--gray-500);margin-top:.5rem;">
+            <p class="form-intro">
               Completa el formulario y un estratega se pondrá en contacto para agendar tu sesión.
             </p>
           </div>
 
-          <form id="contact-form" style="margin-top:2rem;">
-            <div style="margin-bottom:1.5rem;">
+          <form id="contact-form">
+            <div class="form-group">
               <label for="name">Nombre</label>
               <input id="name" name="name" type="text" required />
             </div>
-            <div style="margin-bottom:1.5rem;">
+            <div class="form-group">
               <label for="email">Email de trabajo</label>
               <input id="email" name="email" type="email" required />
             </div>
-            <div style="margin-bottom:1.5rem;">
+            <div class="form-group">
               <label for="company">Empresa</label>
               <input id="company" name="company" type="text" required />
             </div>
-            <div style="margin-bottom:2rem;">
+            <div class="form-group-last">
               <label for="website">Página web actual</label>
               <input id="website" name="website" type="url" placeholder="https://..." required />
             </div>
@@ -218,7 +223,7 @@
             </button>
           </form>
 
-          <p style="margin-top:1.5rem;text-align:center;font-size:.75rem;color:var(--gray-500);">
+          <p class="form-note">
             ✓ Totalmente confidencial &nbsp;✓ Sesión sin costo ni compromiso.
           </p>
         </div>
@@ -228,14 +233,14 @@
 
   <!-- FOOTER -->
   <footer>
-  <div class="container">
-    <nav class="links">
-      <a href="pages/politica-privacidad.html">Política de Privacidad</a>
-      <a href="pages/terminos-condiciones.html">Términos y Condiciones</a>
-    </nav>
-    <p>© 2024 Artífices Studio. Todos los derechos reservados.</p>
-  </div>
-</footer>
+    <div class="container">
+      <nav class="links">
+        <a href="pages/politica-privacidad.html">Política de Privacidad</a>
+        <a href="pages/terminos-condiciones.html">Términos y Condiciones</a>
+      </nav>
+      <p>© 2024 Artífices Studio. Todos los derechos reservados.</p>
+    </div>
+  </footer>
 
   <script type="module" src="/scripts/main.js"></script>
   <script src="https://www.google.com/recaptcha/api.js?render=RECAPTCHA_SITE_KEY"></script>
