--- a/public/pages/terminos-condiciones.html
+++ b/public/pages/terminos-condiciones.html
@@ -9,18 +9,15 @@
     <!-- Tipografías -->
     <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/helvetica_neue.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
-    <link href="css/styles.css" rel="stylesheet" />
-
-    <!-- Favicon principal en SVG -->
-<link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
-
-<!-- Fallback PNG para navegadores que no soportan SVG como favicon -->
-<link rel="icon" href="assets/img/favicon-32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="assets/img/favicon-16.png" sizes="16x16" type="image/png">
-
-<!-- Safari / macOS (opcional, si quieres que la pestaña se pinne con color) -->
-<link rel="mask-icon" href="assets/img/mask-icon.svg" color="#FF003D">
+    <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="apple-mobile-web-app-title" content="Artífices">
+    <meta name="theme-color" content="#000000">
 
 </head>
 
