fix: logo con ruta absoluta /assets/img en páginas legales

--- a/public/pages/terminos-condiciones.html
+++ b/public/pages/terminos-condiciones.html
@@ -25,13 +25,14 @@
     <!-- HEADER -->
     <header>
         <div class="container header-inner">
-            <a href="/" title="Inicio">
-                <div style="display:flex;flex-direction:column;align-items:center;">
-                    <img alt="Logotipo Artífices"
-                        src="assets/img/logotipoartificesoficial.svg"
-                        style="height:1.75rem;" />
-                    <span class="font-primary tagline">Experimental Creative Studio</span>
-                </div>
+            <a href="/" title="Inicio" class="logo" aria-label="Volver al inicio">
+            <div style="display:flex;flex-direction:column;align-items:center">
+                <img
+                src="/assets/img/logotipoartificesoficial.svg"
+                alt="Logotipo Artífices"
+                style="height:1.75rem" />
+                <span class="font-primary tagline">Experimental Creative Studio</span>
+            </div>
             </a>
         </div>
     </header>
