--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,11 @@
   </footer>
 
   <script type="module" src="/scripts/main.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js?render=RECAPTCHA_SITE_KEY"></script>
+  <!-- Google reCAPTCHA v3 -->
+<script
+  src="https://www.google.com/recaptcha/api.js?render=%VITE_RECAPTCHA_SITE_KEY%">
+</script>
+
   <script type="module" src="/scripts/form.js"></script>
 
 </body>
