--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
             </p>
           </div>
 
-          <form id="contact-form">
+          <form id="lead-form">
             <div class="form-group">
               <label for="name">Nombre</label>
               <input id="name" name="name" type="text" required />
@@ -246,10 +246,11 @@
   </footer>
 
   <script type="module" src="/scripts/main.js"></script>
-  <!-- Google reCAPTCHA v3 -->
-<script
-  src="https://www.google.com/recaptcha/api.js?render=%VITE_RECAPTCHA_SITE_KEY%">
++ <!-- reCAPTCHA v3.  La clave se inyecta en build -->
+<script>
+   window.RECAPTCHA_SITE_KEY = '<%- VITE_RECAPTCHA_SITE_KEY %>';
 </script>
+<script src="https://www.google.com/recaptcha/api.js?render=<%- VITE_RECAPTCHA_SITE_KEY %>"></script>
 
   <script type="module" src="/scripts/form.js"></script>
 
