--- a/src/index.html
+++ b/src/index.html
@@ -224,6 +224,8 @@
             <button id="submit-button" class="submit-btn" type="submit">
               Solicitar mi Diagnóstico Gratuito
             </button>
+
+            <p id="form-status" class="form-status" aria-live="polite"></p>
           </form>
 
           <p class="form-note">
