--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <%- gtmHead %>
+
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -53,6 +55,7 @@
 </head>
 
 <body>
+  <%- gtmBody %>
   <!-- HEADER -->
   <header>
     <div class="container">
