feat: inyectar GTM en las páginas

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <%- gtmHead %>
+  
 
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+  <!-- GTM HEAD -->
+  <%- gtmHead %>
 
   <title>Artífices Studio – Diagnóstico de Potencial de Marca</title>
   <title>Diagnóstico de Potencial de Marca | Artífices Studio</title>
@@ -55,6 +58,7 @@
 </head>
 
 <body>
+   <!-- GTM BODY (noscript) -->
   <%- gtmBody %>
   <!-- HEADER -->
   <header>
