--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
   </footer>
 
   <script type="module" src="/scripts/main.js"></script>
-+ <!-- reCAPTCHA v3.  La clave se inyecta en build -->
+ <!-- reCAPTCHA v3.  La clave se inyecta en build -->
 <script>
    window.RECAPTCHA_SITE_KEY = '<%- VITE_RECAPTCHA_SITE_KEY %>';
 </script>
