seo: actualizar marca a “Artífices – Creative Studio” y metadatos OG/Twitter

--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  
-
   <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index,follow" />
 
-  <!-- GTM HEAD -->
+  <!-- Google Tag Manager -->
   <%- gtmHead %>
+  <!-- End GTM -->
 
-  <title>Artífices Studio – Diagnóstico de Potencial de Marca</title>
-  <title>Diagnóstico de Potencial de Marca | Artífices Studio</title>
+  <title>Diagnóstico de Potencial de Marca | Artífices – Creative Studio</title>
+  <meta name="description" content="Convierte tu marca en tu activo más valioso. Reserva un Diagnóstico de Potencial de Marca 100 % gratuito con los expertos de Artífices – Creative Studio." />
 
-  <meta name="description" content="Convierte tu marca en tu activo más valioso. Reserva un Diagnóstico de Potencial de Marca 100 % gratuito con los expertos de Artífices Studio." />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://landing.artifices.studio/" />
 
-  <link rel="canonical" href="https://artifices.studio/diagnostico" />
-
-  <meta property="og:site_name" content="Artífices Studio" />
-  <meta property="og:type"      content="website" />
-  <meta property="og:url"       content="https://artifices.studio/diagnostico" />
-  <meta property="og:title"     content="Diagnóstico de Potencial de Marca | Artífices Studio" />
-  <meta property="og:description" content="Diagnóstico gratuito: descubre las oportunidades ocultas de tu marca y recibe un plan de acción personalizado en 30 minutos." />
-  <meta property="og:image"        content="https://artifices.studio/img/og/diagnostico-1200x630.jpg" />
-  <meta property="og:image:width"  content="1200" />
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Artífices – Creative Studio" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://landing.artifices.studio/" />
+  <meta property="og:title" content="Diagnóstico de Potencial de Marca | Artífices – Creative Studio" />
+  <meta property="og:description" content="Diagnóstico gratuito: descubre oportunidades ocultas de tu marca y recibe un plan de acción en 30 minutos." />
+  <meta property="og:image" content="https://landing.artifices.studio/assets/images/og/landing-og-1200x630.jpg" />
+  <meta property="og:image:secure_url" content="https://landing.artifices.studio/assets/images/og/landing-og-1200x630.jpg" />
+  <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Diagnóstico de Potencial de Marca de Artífices – Creative Studio: sesión gratuita de 30 minutos." />
 
-  <meta name="twitter:card"        content="summary_large_image" />
-  <meta name="twitter:site"        content="@ArtificesStudio" />
-  <meta name="twitter:url"         content="https://artifices.studio/diagnostico" />
-  <meta name="twitter:title"       content="Diagnóstico de Potencial de Marca | Artífices Studio" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Diagnóstico de Potencial de Marca | Artífices – Creative Studio" />
   <meta name="twitter:description" content="Reserva gratis tu diagnóstico y convierte tu marca en motor de crecimiento." />
-  <meta name="twitter:image"       content="https://artifices.studio/img/og/diagnostico-1200x630.jpg" />
+  <meta name="twitter:image" content="https://landing.artifices.studio/assets/images/og/landing-og-1200x630.jpg" />
 
+  <!-- Schema.org -->
   <script type="application/ld+json">
   {
-    "@context":"https://schema.org",
-    "@type":"Organization",
-    "name":"Artífices Studio",
-    "url":"https://artifices.studio",
-    "logo":"https://artifices.studio/img/logotipos/logotipoartificesoficial.svg"
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Artífices – Creative Studio",
+    "url": "https://artifices.studio",
+    "logo": "https://landing.artifices.studio/assets/images/logotipoartificesoficial.svg"
   }
   </script>
 
-  <link href="css/styles.css" rel="stylesheet" />
-  <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/helvetica_neue.css">
+  <!-- Styles -->
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/nwp0lmg.css" />
+  <link rel="stylesheet" href="/css/helvetica_neue.css" />
 
-<link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-<link rel="manifest" href="/site.webmanifest">
-<meta name="apple-mobile-web-app-title" content="Artífices">
-<meta name="theme-color" content="#000000">
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="apple-mobile-web-app-title" content="Artífices" />
+  <meta name="theme-color" content="#000000" />
 
-
+  <!-- Perf -->
+  <link rel="preconnect" href="https://use.typekit.net" crossorigin>
+  <link rel="preconnect" href="https://p.typekit.net" crossorigin>
+  <link rel="dns-prefetch" href="//www.googletagmanager.com">
 </head>
+
 
 <body>
    <!-- GTM BODY (noscript) -->
@@ -250,7 +258,7 @@
         <a href="/pages/politica-privacidad.html">Política de Privacidad</a>
         <a href="/pages/terminos-condiciones.html">Términos y Condiciones</a>
       </nav>
-      <p>© 2024 Artífices Studio. Todos los derechos reservados.</p>
+      <p>© 2024 Artífices - Creative Studio. Todos los derechos reservados.</p>
     </div>
   </footer>
 
